--- a/quick-cpp-client/CMakeLists.txt
+++ b/quick-cpp-client/CMakeLists.txt
@@ -2,12 +2,12 @@ cmake_minimum_required (VERSION 3.9)
 
 project(quick-cpp-client)
 
-# CPP REST SDK
 find_package(cpprestsdk CONFIG REQUIRED)
+find_package(nlohmann_json CONFIG REQUIRED)
 
 if(WIN32)
-    source_group("include" REGULAR_EXPRESSION "include/*")
-    source_group("source" REGULAR_EXPRESSION "source/*")
+source_group("include" REGULAR_EXPRESSION "include/*")
+source_group("source" REGULAR_EXPRESSION "source/*")
 endif(WIN32)
 
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include)
@@ -18,7 +18,9 @@ file(GLOB_RECURSE HPP_FILES ${CMAKE_CURRENT_SOURCE_DIR}/include/*.*)
 add_executable(${PROJECT_NAME} ${CPP_FILES} ${HPP_FILES})
 
 # LINK LIBRARIES
-target_link_libraries(${PROJECT_NAME} PRIVATE cpprestsdk::cpprest cpprestsdk::cpprestsdk_zlib_internal cpprestsdk::cpprestsdk_boost_internal cpprestsdk::cpprestsdk_openssl_internal)
+target_link_libraries(${PROJECT_NAME} PRIVATE cpprestsdk::cpprest cpprestsdk::cpprestsdk_zlib_internal cpprestsdk::cpprestsdk_brotli_internal)
+target_link_libraries(${PROJECT_NAME} PRIVATE nlohmann_json nlohmann_json::nlohmann_json)
+
 
 # SET PROPERTY
 set_property(TARGET ${PROJECT_NAME} PROPERTY RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/binaries)
