--- a/quick-cpp-client/CMakeLists.txt
+++ b/quick-cpp-client/CMakeLists.txt
@@ -4,6 +4,7 @@ project(quick-cpp-client)
 
 find_package(cpprestsdk CONFIG REQUIRED)
 find_package(nlohmann_json CONFIG REQUIRED)
+find_package(websocketpp CONFIG REQUIRED)
 
 if(WIN32)
 source_group("include" REGULAR_EXPRESSION "include/*")
@@ -20,7 +21,7 @@ add_executable(${PROJECT_NAME} ${CPP_FILES} ${HPP_FILES})
 # LINK LIBRARIES
 target_link_libraries(${PROJECT_NAME} PRIVATE cpprestsdk::cpprest cpprestsdk::cpprestsdk_zlib_internal cpprestsdk::cpprestsdk_brotli_internal)
 target_link_libraries(${PROJECT_NAME} PRIVATE nlohmann_json nlohmann_json::nlohmann_json)
-
+target_link_libraries(${PROJECT_NAME} PRIVATE websocketpp::websocketpp)
 
 # SET PROPERTY
 set_property(TARGET ${PROJECT_NAME} PROPERTY RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/binaries)
