--- a/quick-cpp-client/CMakeLists.txt
+++ b/quick-cpp-client/CMakeLists.txt
@@ -3,6 +3,8 @@ cmake_minimum_required (VERSION 3.9)
 project(quick-cpp-client)
 
 find_package(cpprestsdk CONFIG REQUIRED)
+find_package(Boost 1.77 REQUIRED)
+
 
 if(WIN32)
 source_group("include" REGULAR_EXPRESSION "include/*")
@@ -10,6 +12,7 @@ source_group("source" REGULAR_EXPRESSION "source/*")
 endif(WIN32)
 
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include)
+include_directories(${Boost_INCLUDE_DIRS})
 
 file(GLOB_RECURSE CPP_FILES ${CMAKE_CURRENT_SOURCE_DIR}/source/*.cpp)
 file(GLOB_RECURSE HPP_FILES ${CMAKE_CURRENT_SOURCE_DIR}/include/*.*)
@@ -17,9 +20,8 @@ file(GLOB_RECURSE HPP_FILES ${CMAKE_CURRENT_SOURCE_DIR}/include/*.*)
 add_executable(${PROJECT_NAME} ${CPP_FILES} ${HPP_FILES})
 
 # LINK LIBRARIES
-target_link_libraries(${PROJECT_NAME} PRIVATE cpprestsdk::cpprest cpprestsdk::cpprestsdk_zlib_internal cpprestsdk::cpprestsdk_brotli_internal)
+target_link_libraries(${PROJECT_NAME} PRIVATE cpprestsdk::cpprest cpprestsdk::cpprestsdk_zlib_internal cpprestsdk::cpprestsdk_boost_internal cpprestsdk::cpprestsdk_brotli_internal)
 
-# SET PROPERTY
 set_property(TARGET ${PROJECT_NAME} PROPERTY RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/binaries)
 set_property(TARGET ${PROJECT_NAME} PROPERTY RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_CURRENT_SOURCE_DIR}/binaries)
 set_property(TARGET ${PROJECT_NAME} PROPERTY RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_CURRENT_SOURCE_DIR}/binaries)
